--- a/PruebaGitHub.ipynb
+++ b/PruebaGitHub.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PruebaGitHub.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM6E24CSmpxwEi/lL4tHmMC",
+      "authorship_tag": "ABX9TyOGeBRnngpj5QUBQWGwdftp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,12 @@
         "colab_type": "text"
       },
       "source": [
-        "prueba"
+        "prueba\n",
+        "adsf\n",
+        "ads\n",
+        "fa\n",
+        "dsf\n",
+        "1\n"
       ]
     }
   ]
